// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button correctly renders default markup 1`] = `
<button
  className="btn"
  onClick={[Function]}
  type="button"
>
  <span>
    btn label
  </span>
</button>
`;

exports[`Button correctly renders inlist mode markup 1`] = `
<button
  className="btn btn--inlist"
  onClick={[Function]}
  type="button"
>
  <svg
    height={14}
    viewBox="0 0 18 14"
    width={18}
  >
    <use
      xlinkHref="#in-list"
    />
  </svg>
  <span>
    btn label
  </span>
</button>
`;

exports[`Button correctly renders list mode markup 1`] = `
<button
  className="btn btn--list"
  onClick={[Function]}
  type="button"
>
  <svg
    height={20}
    viewBox="0 0 19 20"
    width={19}
  >
    <use
      xlinkHref="#add"
    />
  </svg>
  <span>
    btn label
  </span>
</button>
`;

exports[`Button correctly renders play mode markup 1`] = `
<button
  className="btn btn--play"
  onClick={[Function]}
  type="button"
>
  <svg
    height={19}
    viewBox="0 0 19 19"
    width={19}
  >
    <use
      xlinkHref="#play-s"
    />
  </svg>
  <span>
    btn label
  </span>
</button>
`;
